--- a/package.json
+++ b/package.json
@@ -50,12 +50,15 @@
     "node": ">=8.9"
   },
   "dependencies": {
-    "sha.js": "^2.4.11"
+    "chromecast-player": "^0.2.3",
+    "delay": "^4.3.0",
+    "webpage-capture": "^0.2.2"
   },
   "devDependencies": {
     "@bitjson/npm-scripts-info": "^1.0.0",
     "@bitjson/typedoc": "^0.15.0-0",
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
+    "@types/mdns": "0.0.33",
     "ava": "2.2.0",
     "codecov": "^3.5.0",
     "cz-conventional-changelog": "^2.1.0",
